acvm-repo/msgpack_tagged/tests/compile_fail/allow_unknown_tags_with_args.stderr
error: expected `reserved(...)`, `allow_unknown_tags`, `default_on_reserved`, `default_on_unknown`, or `via(...)` inside `#[tagged(...)]` on a type
 --> tests/compile_fail/allow_unknown_tags_with_args.rs:9:10
  |
9 | #[tagged(allow_unknown_tags = true)] // attribute takes no arguments
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^
